# MooSwitcher

./: .gitignore  CMakeLists.txt  EXCEPTIONS.md  LICENSE.md  README.md
cmake/: EmbedFile.cmake  FindNDI.cmake
companion/: package-lock.json  package.json
companion/companion/: HELP.md  manifest.json
companion/src/: actions.js  feedbacks.js  main.js  presets.js  upgrades.js  variables.js
companion/test/: smoke.js
docs/: bench-dsk.md  bench-framesync.md  bench-m0.md  bench-m5.md  bench-omt.md  design-clean-feed.md  design-dsk.md  design-encoder.md  design-framesync.md  design-recorder-media.md  omt.md  remote-control.md  tuning.md
scripts/: av_offset_ts.py  bench_speedhq.sh  cpu_sample.py  ndi-netns-bench.sh  tuning-sysctl.conf
shaders/: composite.comp  multiview_tile.comp  pack_nv12.comp  pack_uyvy.comp  proxy_down.comp  ycbcr.glsl
src/audio/: AudioEngine.cpp  AudioEngine.h  AudioRing.h  MixerCore.cpp  MixerCore.h
src/core/: Font5x7.h  Format.h  Log.h  MediaClock.cpp  MediaClock.h  Spsc.h  Stats.cpp  Stats.h
src/ctl/: ControlProtocol.cpp  ControlProtocol.h  ControlServer.cpp  ControlServer.h
src/engine/: Commands.h  Engine.cpp  Engine.h  FrameSync.h  IInputSource.h  SwitcherCore.cpp  SwitcherCore.h
src/gpu/: Compositor.cpp  Compositor.h  Nv12Ring.cpp  Nv12Ring.h  UploadRing.cpp  UploadRing.h  VkEngine.cpp  VkEngine.h
src/in/: SrtInput.cpp  SrtInput.h  StillInput.cpp  StillInput.h
src/media/: AacEncoder.cpp  AacEncoder.h  CudaCtx.cpp  CudaCtx.h  FfmpegNvenc.cpp  FfmpegNvenc.h  IVideoEncoder.h  NvencDirect.cpp  NvencDirect.h  Playlist.h  StillImage.h  VideoEncoder.cpp
src/ndi/: NdiFinder.cpp  NdiFinder.h  NdiLib.cpp  NdiLib.h  NdiReceiver.cpp  NdiReceiver.h
src/omt/: OmtInput.cpp  OmtInput.h
src/ui/: EngineBridge.cpp  EngineBridge.h  MainWindow.cpp  MainWindow.h  MixerPanel.cpp  MixerPanel.h  MultiviewWidget.cpp  MultiviewWidget.h  ShowFile.cpp  ShowFile.h  main.cpp  resources.qrc
tests/: aac_test.cpp  audio_test.cpp  clock_test.cpp  control_protocol_test.cpp  framesync_test.cpp  gpu_composite_test.cpp  interop_test.cpp  media_playlist_test.cpp  nvenc_direct_test.cpp  ring_test.cpp  strip_test.cpp  switcher_core_test.cpp  ui_input_picker_test.cpp  ui_output_format_test.cpp
tools/common/: pattern.h  ppm.h
tools/moo-headless/: main.cpp
tools/moo-latmeter/: main.cpp
tools/moo-testgen/: main.cpp
